[tool.poetry]
name = "knuckles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.3"
pytesseract = "^0.2.6"
aiohttp = "^3.5"
asyncpool = "^1.0"
autopep8 = "^1.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
